<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.com.cajuinaweb.androidappbanco.SaqueActivity">
    <ImageView
        android:contentDescription="@string/lbMeuBanco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_logo"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbWelcome"
        android:id="@+id/lbWelcome"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="14sp"
        android:textStyle="bold" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/lbWelcome"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:textSize="12sp"
        android:id="@+id/lbnumConta" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lbnumConta"
        android:layout_marginTop="15dp"
        android:padding="10dp"
        android:background="@color/colorPrimaryDark"
        android:id="@+id/blockSaldo">

        <TextView
            android:id="@+id/lbSaldo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbSaldoConta"
            android:textColor="@color/colorWhite"/>

        <TextView
            android:id="@+id/lbSaldoValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"/>
    </FrameLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/blockSaldo"
        android:layout_marginTop="15dp"
        android:padding="10dp"
        android:background="@color/colorGray"
        android:id="@+id/blockOperacoes">

        <TextView
            android:text="@string/btEfetuarSaque"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"/>
    </FrameLayout>


    <EditText
        android:layout_marginTop="30dp"
        android:hint="@string/hintValorSaque"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/valorSaque"
        android:layout_below="@id/blockOperacoes"/>

    <Button
        android:layout_marginTop="20dp"
        android:layout_below="@id/valorSaque"
        android:id="@+id/efetuarSaque"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btConfirmaSaque"/>

</RelativeLayout>
