<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.com.cajuinaweb.androidappbanco.MainActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_logo"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbWelcome"
        android:id="@+id/lbWelcome"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="14sp"
        android:textStyle="bold" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/lbWelcome"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:textSize="12sp"
        android:id="@+id/lbnumConta" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lbnumConta"
        android:layout_marginTop="15dp"
        android:padding="10dp"
        android:background="@color/colorPrimaryDark"
        android:id="@+id/blockSaldo">

        <TextView
            android:id="@+id/lbSaldo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbSaldoConta"
            android:textColor="@color/colorWhite"/>

        <TextView
            android:id="@+id/lbSaldoValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"/>
    </FrameLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/blockSaldo"
        android:layout_marginTop="25dp"
        android:padding="10dp"
        android:background="@color/colorGray"
        android:id="@+id/blockOperacoes">

        <TextView
            android:text="@string/titOpDisponiveis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"/>
    </FrameLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_below="@+id/blockOperacoes"
    android:layout_marginTop="5dp"
    android:layout_centerHorizontal="true"
    android:gravity="center_horizontal"
    android:id="@+id/linearLayout">

    <Button
        android:id="@+id/btnDeposito"
        android:layout_marginRight="2dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btEfetuarDep"
        android:drawableTop="@drawable/ic_deposity"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/colorWhite"
        android:drawableTint="@color/colorWhite"
        />

    <Button
        android:id="@+id/btnSaque"
        android:layout_marginLeft="2dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btEfetuarSaque"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/colorWhite"
        android:drawableTop="@drawable/ic_saque"
        android:drawableTint="@color/colorWhite"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
/>

</LinearLayout>

    <Button
        android:id="@+id/btnLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btLogout"
        android:layout_above="@+id/lbInfo"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp" />

    <TextView
        android:id="@+id/lbInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/txtCopyright"
        android:textAlignment="center"/>

</RelativeLayout>
